--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,204 @@
 .App-link {
   color: #61dafb;
 }
+body {
+  color: hsla(0, 0%, 0%, 0.8);
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  word-wrap: break-word;
+  font-kerning: normal;
+  -moz-font-feature-settings: "kern", "liga", "clig", "calt";
+  -ms-font-feature-settings: "kern", "liga", "clig", "calt";
+  -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
+  font-feature-settings: "kern", "liga", "clig", "calt";
+}
+img {
+  max-width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  margin-bottom: 1.45rem;
+}
+h1 {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  margin-bottom: 1.45rem;
+  color: inherit;
+  font-family: 'Permanent Marker', cursive;
+  text-rendering: optimizeLegibility;
+  font-size: 2.25rem;
+  line-height: 1.1;
+}
+h2 {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  margin-bottom: 1.45rem;
+  color: inherit;
+  font-family: 'Permanent Marker', cursive;
+  text-rendering: optimizeLegibility;
+  font-size: 1.62671rem;
+  line-height: 1.1;
+}
+h3 {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  margin-bottom: 1.45rem;
+  color: inherit;
+  font-family: 'Permanent Marker', cursive;
+  text-rendering: optimizeLegibility;
+  font-size: 1.38316rem;
+  line-height: 1.1;
+}
+h4 {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  margin-bottom: 1.45rem;
+  color: inherit;
+  font-family: 'Permanent Marker', cursive;
+  text-rendering: optimizeLegibility;
+  font-size: 1rem;
+  line-height: 1.1;
+}
+h5 {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  margin-bottom: 1.45rem;
+  color: inherit;
+  font-family: 'Permanent Marker', cursive;
+  text-rendering: optimizeLegibility;
+  font-size: 0.85028rem;
+  line-height: 1.1;
+}
+h6 {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  margin-bottom: 1.45rem;
+  color: inherit;
+  font-family: 'Permanent Marker', cursive;
+  text-rendering: optimizeLegibility;
+  font-size: 0.78405rem;
+  line-height: 1.1;
+}
+div .pintext {
+  margin-left: -31px;
+  margin-top: -13px;
+  width: 90px;
+  text-align: center;
+}
+div .pintext span{
+  font-size: 10px;
+  padding-top: -23px;
+  width: 90px;
+  padding-left: 3px;
+  padding-right: 3px;
+  font-weight: normal;
+  text-transform: uppercase;
+  text-align: center;
+  color: black;
+  background: rgba(255, 255, 255, 0.7)
+}
+div .pintext img{
+  padding-top: -30px;
 
+}
+.absolute-image {
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  width: 25px;
+}
+.me-on-map {
+  left: -30px;
+  top: -30px;
+}
+.themissionbox {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  align-content: center;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 100;
+  display: none;
+}
+.mission-box {
+  display: none;
+  position: absolute;
+  top: 6%;
+  left: 6%;
+  font-size: 16px;
+  z-index: 100;
+  border-radius: 15px;
+  padding: 15px;
+  width: 88%;
+  height: 88%;
+  background: rgba(220, 220, 220, 0.95);
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+.mission-box h3 {
+  font-family: 'Permanent Marker', cursive;
+  color: #330066;
+}
+.start-mission-btn {
+  box-shadow:inset 0px 1px 3px 0px #330066;
+  background: linear-gradient(to bottom, rebeccapurple 5%, #552288 100%);
+  background-color: rebeccapurple;
+  border-radius:5px;
+  border:1px solid #441177;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:14px;
+  font-weight:bold;
+  padding:10px 46px;
+  text-decoration:none;
+  text-shadow:0px -1px 0px #441177;
+}
+.start-mission-btn:hover {
+  background:linear-gradient(to bottom, #552288 5%, rebeccapurple 100%);
+  background-color:#552288;
+}
+.start-mission-btn:active {
+  position:relative;
+  top:1px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
