--- a/src/App.css
+++ b/src/App.css
@@ -52,15 +52,13 @@ body {
   font-feature-settings: "kern", "liga", "clig", "calt";
 }
 button {
-  min-width: 200px;
   font-family: 'Permanent Marker', cursive!important;
   font-size: 18px!important;
   padding: 10px!important;
-  border-radius: 10px!important;
+  color: black!important;
 }
 button:hover {
-  color: #61dafb!important;
-  border: 1px #61dafb dotted!important;
+
 }
 .container {
   background-color: #282c34;
@@ -293,6 +291,45 @@ div .next-point {
 .start-mission-btn:active {
   position:relative;
   top:1px;
+}
+
+.flashy-btn {
+  color: #000;
+  transition: all 0.5s;
+  position: relative;
+  width:100%;
+}
+.flashy-btn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(100,255,255,0.1);
+  transition: all 0.3s;
+}
+.flashy-btn:hover::before {
+  opacity: 0 ;
+  transform: scale(0.5,0.5);
+}
+.flashy-btn::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border: 1px solid rgba(255,255,255,0.8);
+  transform: scale(1.2,1.2);
+}
+.flashy-btn:hover::after {
+  opacity: 1;
+  transform: scale(1,1);
 }
 
 @keyframes App-logo-spin {
