--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ button:hover {
   padding: 25px;
   font-family: 'Roboto', sans-serif;
   width: 100%;
-  height: 100%;
+  min-height: 800px;
 }
 .container p {
   padding-bottom: 20px;
