--- a/src/App.css
+++ b/src/App.css
@@ -62,13 +62,13 @@ button:hover {
 }
 .container {
   background-color: #282c34;
-  background-image: image();
   margin: auto;
   padding: 25px;
   padding-top: 100px;
   font-family: 'Roboto', sans-serif;
   width: 100%;
-  min-height: 800px;
+  min-height: 750px;
+  z-index: 2;
 }
 .container p {
   padding-bottom: 20px;
@@ -77,9 +77,17 @@ button:hover {
 .container .skyline-image {
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -20px;
+  z-index: 0;
+  opacity: 0.4;
 }
-
+.bg-container {
+  width: 100%;
+  min-height: 750px;
+  opacity: 0.4;
+  z-index: 0;
+  background-color: #282c34;
+}
 img {
   max-width: 100%;
   margin-left: 0;
@@ -342,15 +350,18 @@ div .next-point {
 }
 
 .logo-img {
+  z-index: 0;
   -webkit-animation: spin 3s infinite;
   animation: spin 3s infinite;
 }
 .logo-holder {
+  z-index: 0;
   padding-top: 130px;
   color: #aaa;
   font-size: 12px;
 }
 .logo-holder a {
+  z-index: 0;
   text-decoration: none;
   color: #61dafb;
 }
