--- a/src/App.css
+++ b/src/App.css
@@ -297,7 +297,7 @@ div .next-point {
   border:1px solid #441177;
   display:inline-block;
   cursor:pointer;
-  color:#ffffff;
+  color:#ffffff!important;
   font-family:Arial;
   font-size:14px;
   font-weight:bold;
@@ -308,12 +308,28 @@ div .next-point {
 .start-mission-btn:hover {
   background:linear-gradient(to bottom, #552288 5%, rebeccapurple 100%);
   background-color:#552288;
+  color: #ddd!important;
 }
 .start-mission-btn:active {
   position:relative;
   top:1px;
 }
-
+.mission-started-wrapper {
+  width: 100%;
+  margin-left: calc(50% - 60px);
+}
+.mission-started-wrapper .mission-timer {
+  width: 120px;
+  background-color: #FFF;
+  border-radius: 10px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  color: #000;
+  font-weight: bold;
+}
+.mission-timer {
+  z-index: 1000;
+}
 .flashy-btn {
   color: #000;
   transition: all 0.5s;
