--- a/src/App.css
+++ b/src/App.css
@@ -313,7 +313,7 @@ div .next-point {
   display:inline-block;
   cursor:pointer;
   color:#ffffff!important;
-  font-family:Arial;
+  font-family: 'Roboto', sans-serif;
   font-size:14px;
   font-weight:bold;
   padding:10px 46px;
@@ -340,6 +340,7 @@ div .next-point {
 }
 .finished-mission {
   font-size: 12px;
+  display: none;
 }
 .mission-started-wrapper .mission-timer {
   width: 120px;
@@ -447,14 +448,14 @@ a {
 
 @keyframes pulse {
   0% {
-    transform: scale(0.8);
+    transform: scale(0.9);
   }
 
   50% {
-    transform: scale(1.4);
+    transform: scale(1.2);
   }
 
   100% {
-    transform: scale(0.8);
+    transform: scale(0.9);
   }
 }
