--- a/src/App.css
+++ b/src/App.css
@@ -210,6 +210,22 @@ h6 {
   font-size: 0.78405rem;
   line-height: 1.1;
 }
+.h6 {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  padding-right: 0;
+  padding-left: 20px;
+  padding-top: 0;
+  margin-bottom: 1.45rem;
+  font-family: 'Permanent Marker', cursive;
+  text-rendering: optimizeLegibility;
+  font-size: 0.78405rem;
+  line-height: 1.1;
+  color: #FFFFFF;
+  text-align: left;
+}
 .nothing {
   left: 0;
   top: 100px;
