--- a/src/App.css
+++ b/src/App.css
@@ -336,6 +336,33 @@ div .next-point {
   background: rgba(220, 220, 220, 0.95);
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
+.welcome-screen-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  align-content: center;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+}
+.welcome-screen{
+  position: absolute;
+  top: 6%;
+  left: 6%;
+  font-size: 16px;
+  z-index: 100;
+  border-radius: 15px;
+  padding: 15px;
+  width: 88%;
+  height: 88%;
+  background: rgba(220, 220, 220, 0.95);
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+.welcome-screen h6 {
+  color: rebeccapurple;
+}
 .mission-box h3 {
   font-family: 'Permanent Marker', cursive;
   color: #330066;
