--- a/src/App.css
+++ b/src/App.css
@@ -520,7 +520,7 @@ color: #FFFFFF;
   height: 30px;
   right: 10px;
   top: 10px;
-  font-size:1px;
+  font-size:0px!important;
 }
 
 /* Color/shape of burger icon bars */
