--- a/src/App.css
+++ b/src/App.css
@@ -622,6 +622,18 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .scoreboard-teams {
   font-size: 16px;
   font-weight: bold;
+  text-transform: uppercase;
+}
+.scoreboard-scores-even {
+  font-size: 16px;
+  background-color: #552288;
+  font-weight: bold;
+  border-bottom: 3px solid #2c094e;
+}
+.scoreboard-scores-odd {
+  font-size: 16px;
+  background-color: #2c094e;
+  font-weight: bold;
 }
 @keyframes App-logo-spin {
   from {
