AdminStories.js updated with deletfunction for stories.

--- a/src/App.css
+++ b/src/App.css
@@ -499,6 +499,45 @@ div .next-point {
   opacity: 1;
   transform: scale(1,1);
 }
+.flashy-btn-delete {
+  color: #000;
+  transition: all 0.5s;
+  position: relative;
+  width:100%;
+}
+.flashy-btn-delete::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(100,255,255,0.1);
+  transition: all 0.3s;
+}
+.flashy-btn-delete:hover::before {
+  opacity: 0 ;
+  transform: scale(0.5,0.5);
+}
+.flashy-btn-delete::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border: 1px solid rgba(217, 30, 24, 1);
+  transform: scale(1.2,1.2);
+
+}
+.flashy-btn-delete:hover::after {
+  opacity: 1;
+  transform: scale(1,1);
+}
 .player-box {
   text-align: left;
 }
