--- a/src/App.css
+++ b/src/App.css
@@ -347,9 +347,21 @@ div .next-point {
   width: 300px;
   font-size: 14px;
   padding: 5px;
-
 }
-
+.input-contact-text {
+  width: 420px;
+  font-size: 14px;
+  padding: 6px;
+  border-radius: 8px;
+}
+.input-message-text {
+  width: 420px;
+  font-size: 14px;
+  padding: 6px;
+  height: 100px;
+  text-align: left;
+  border-radius: 8px;
+}
 .themissionbox {
   position: absolute;
   width: 100%;
